# web-scraper

./: README.md  pyproject.toml
testing_txt/: test_page.html
tests/: test_web_scraper.py
web_scraper/: scraper.py
